--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     </div>
                 </div>
             </div>
-            <a href="img/CV_PABLO_ANDRES_CABALEIRO_NODA.pdf" download>
+            <a href="img/CV.pdf" download>
                 <button>
                     Download CV <i class="fa-solid fa-download"></i>
                     <span class="overlay"></span>
