--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <section id="inicio" class="inicio">
     <div class="contenido-banner">
         <div class="contenedor-img">
-            <img src="img/hero.png" alt="">
+            <img src="img/imagen8.png" alt="">
         </div>
         <h1>PABLO CABALEIRO</h1>
         <h2>Mechanical - Biomedical - Software Engineer</h2>
