--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
         <div class="contenido-seccion">
             <h2>Research</h2> <!-- Título de la sección -->
             
-            <h3 class="titulo-publicacion">DEVELOPMENT OF A HYPERSPECTRAL IMAGE-GUIDED ROBOTIC SURGERY SYSTEM.DEVELOPMENT OF A HYPERSPECTRAL IMAGE-GUIDED ROBOTIC SURGERY SYSTEM</h3> <!-- Título de la publicación -->
+            <h3 class="titulo-publicacion">DEVELOPMENT OF A HYPERSPECTRAL IMAGE-GUIDED ROBOTIC SURGERY SYSTEM</h3> <!-- Título de la publicación -->
             <span class="fecha-publicacion">Publication date: 14.12.2023</span> <!-- Fecha de publicación -->
             
             <div class="fila">
@@ -448,7 +448,7 @@ However, these measures also create economic barriers, mainly affecting startups
                 <input type="text" placeholder="Subject">
                 <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
                 <button id="sendMessage">
-                    Enviar Mensaje<i class="fa-solid fa-paper-plane"></i>
+                    Send message<i class="fa-solid fa-paper-plane"></i>
                     <span class="overlay"></span>
                 </button>
             </div>
@@ -512,7 +512,7 @@ However, these measures also create economic barriers, mainly affecting startups
 <script>
     // Aviso del formulario de contacto
     document.getElementById('sendMessage').addEventListener('click', function () {
-        alert("ATENCIÓN: el correo no ha sido enviado. Por favor, envíe un correo directo a: pablocabaleironoda@gmail.com");
+        alert("ATTENTION: The email has not been sent. Please send a direct email to: pablocabaleironoda@gmail.com");
     });
 </script>
 
